--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,8 +7,13 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.4.2",
+    "axios": "^1.6.7",
+    "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "sweetalert2": "^11.6.13",
     "vue": "^3.2.13",
+    "vue-multiselect": "3.0.0-beta.3",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
@@ -16,6 +21,9 @@
     "@vue/cli-plugin-babel": "~5.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "@vue/cli-plugin-vuex": "~5.0.0",
-    "@vue/cli-service": "~5.0.0"
+    "@vue/cli-service": "~5.0.0",
+    "autoprefixer": "^10.4.18",
+    "postcss": "^8.4.35",
+    "tailwindcss": "^3.4.1"
   }
 }
