--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve  --port 8000",
+    "serve": "vue-cli-service serve  --port 8001",
     "build": "vue-cli-service build"
   },
   "dependencies": {
@@ -11,6 +11,9 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "primeflex": "^3.3.1",
+    "primeicons": "^6.0.1",
+    "primevue": "^3.41.0",
     "sweetalert2": "^11.6.13",
     "vue": "^3.2.13",
     "vue-multiselect": "3.0.0-beta.3",
