--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,9 +12,11 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.3",
     "core-js": "^3.8.3",
+    "laravel-echo": "^1.16.1",
     "primeflex": "^3.3.1",
     "primeicons": "^6.0.1",
     "primevue": "^3.41.0",
+    "pusher-js": "^8.4.0-rc2",
     "sweetalert2": "^11.6.13",
     "vue": "^3.2.13",
     "vue-multiselect": "3.0.0-beta.3",
