add a materiel dans chambre

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,7 @@
 VUE_APP_TITLE =Lodge Cité 
+
+VUE_APP_URL_BACK =http://127.0.0.1:8000/api/
+
+VUE_APP_WEBSOCKETS_KEY =local 
+VUE_APP_WEBSOCKETS_WBHOST =127.0.0.1
+VUE_APP_WEBSOCKETS_WBHOST =6001 
