--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vue": "^3.2.13",
     "vue-multiselect": "3.0.0-beta.3",
     "vue-router": "^4.0.3",
+    "vue-tel-input": "^9.1.2",
     "vuex": "^4.0.0"
   },
   "devDependencies": {
