--- a/frontend/.env
+++ b/frontend/.env
@@ -1,6 +1,7 @@
 VUE_APP_TITLE =Lodge Cité 
 
 # VUE_APP_URL_BACK =http://172.20.10.3:8000/api/
+# VUE_APP_URL_BACK =http://192.168.1.137:8000/api/
 VUE_APP_URL_BACK =http://127.0.0.1:8000/api/
 
 VUE_APP_WEBSOCKETS_KEY =local 
